--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "config": "^3.3.2",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "datauri": "^3.0.0",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
@@ -20,6 +21,8 @@
     "lodash": "^4.17.20",
     "mongoose": "^5.10.14",
     "morgan": "~1.9.1",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "multer-storage-cloudinary": "^4.0.0",
+    "path": "^0.12.7"
   }
 }
