--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -23,6 +23,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^4.0.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "socket.io": "^3.0.4"
   }
 }
